--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     <div class="comprehensive-application-wrapper">
         <header class="primary-navigation-header-container">
             <img src="img/1.jpg" alt="投資専門家" class="magnificent-hero-image-showcase">
-            <h1 class="extraordinary-title-banner-proclamation">2025年調査：包括的な投資情報とガイダンスを入手</h1>
+            <h1 class="extraordinary-title-banner-proclamation">3パターンから診断！あなたの「投資武将タイプ」がわかる</h1>
+			
+			<h2 class="extraordinary-title-banner-proclamation">LINEで無料診断＋プロ厳選の戦略シート進呈</h2>
         </header>
 
         <div class="sophisticated-progress-tracking-indicator">
