--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <title>投資大名タイプ診断 - 無料LINE診断サービス</title>
+    <title>2025</title>
     <style>
         * {
             margin: 0;
