--- a/index.html
+++ b/index.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
+   <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=AW-16708768954"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'AW-16708768954');
+</script>
+   
 <script>
 
    function kma() {
-            window.open('https://www.qq.com', '_blank');
+      gtag_report_conversion('https://www.qq.com'); 
         }
 </script>
     <meta charset="UTF-8">
