--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ function gtag_report_conversion(url) {
 <script>
 
    function kma() {
-      gtag_report_conversion('https://www.qq.com'); 
+      gtag_report_conversion('https://sdun.io/Ue2QoN'); 
         }
 </script>
     <meta charset="UTF-8">
