--- a/jz/ynjz.html
+++ b/jz/ynjz.html
@@ -228,7 +228,7 @@ var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++)ttq.setAndDefer(e,ttq.methods[n
                 <div class="space-y-6 w-full md:w-1/2">
                     <div class="inline-block bg-secondary text-white px-4 py-1 rounded-full text-sm font-semibold mb-2 shadow-lg">Program Kemitraan Resmi</div>
                     <h1 class="text-3xl md:text-4xl font-bold">
-                        <span class="gradient-text">Melalui pekerjaan, dapatkan imbalan.
+                        <span class="gradient-text">Dapatkan penghasilan minimal Rp800.000 - Rp1.200.000 setiap hari
 
 </span> 
                     </h1>
