--- a/jz/ynjz.html
+++ b/jz/ynjz.html
@@ -544,6 +544,7 @@ var e=ttq._i[t]||[],n=0;n<ttq.methods.length;n++)ttq.setAndDefer(e,ttq.methods[n
          // ttq.track('Contact');
             // ttq.track('AddToCart');
               fbq('track', 'Contact');
+                fbq('track', 'WhatsApp_Click');
          // ttq.track('Contact');
              //ttq.track('AddToCart');
           window.open('https://sourl.cn/pz7s8W', '_blank');
